tools: start tasks via inter process communication